[project]
name = "hnh"
version = "0.1.0"
description = "hotdog"
authors = [
    {name = "Nicou11", email = "lyoungin1204@gmail.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "transformers>=4.45.0",
    "tensorflow>=2.17.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "python-multipart>=0.0.10",
    "tf-keras>=2.17.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]
[tool.pytest.ini_options]
pythonpath = "src"
